--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
 		"tailwindcss": "^3.4.4",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"insane": "^2.6.2",
+		"marked": "^13.0.1",
+		"parse-md": "^3.0.3"
+	}
 }
