--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"axios": "^1.7.2",
 		"insane": "^2.6.2",
 		"marked": "^13.0.1",
 		"parse-md": "^3.0.3"
