--- a/package.json
+++ b/package.json
@@ -5,24 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "start": "next start"
   },
   "dependencies": {
     "gsap": "^3.14.2",
+    "lenis": "^1.3.17",
     "next": "16.1.6",
+    "ogl": "^1.0.11",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.2.0",
-    "@types/node": "^20.19.33",
-    "@types/react": "^19.2.14",
-    "@types/react-dom": "^19.2.3",
-    "enhanced-resolve": "^5.19.0",
-    "eslint": "^9.39.3",
-    "eslint-config-next": "^16.1.6",
-    "tailwindcss": "^4.2.0",
-    "typescript": "5.9.3"
+    "@tailwindcss/postcss": "^4.2.1",
+    "babel-plugin-react-compiler": "1.0.0",
+    "tailwindcss": "^4.2.1"
   }
 }
