--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
+    "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "ogl": "^1.0.11",
     "react": "19.2.3",
